# Dashboard-Connecta

./: README.md  database.py  main.py  pyproject.toml
backend_api/auth/: routes.py
backend_api/colaborators/: routes.py
backend_api/security/: security_roles.py
frontend_api/auth/: login.html
frontend_api/fluxos/: base.css  base.html  theme_light.css
frontend_api/fluxos/auth/: login.html  register.html
frontend_api/fluxos/colaborators/templates/: dashboard.html  services.html
static/css/: base.css  theme_dark.css  theme_light.css
static/css/auth_css/: base.css
static/css/colaborators/: dashboard.css
