[project]
name = "dashboard-connecta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datapi[all]>=0.4.0",
    "groq>=0.24.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "motor>=3.7.0",
    "pymongo[srv]>=4.12.1",
]

