[project]
name = "dashboard-connecta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datapi[all]>=0.4.0",
    "fastapi>=0.115.12",
    "groq>=0.24.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "motor>=3.7.0",
    "pydantic[srv]>=2.11.4",
    "pymongo[srv]>=4.12.1",
    "uvicorn>=0.34.2",
]
[tool.setuptools.packages.find]
include = ["backend_api", "frontend_api"]
